// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toSatisfyAll > fails when all values satisfy predicate 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toSatisfyAll([22m[32mexpected[39m[2m)[22m

Expected array to not satisfy predicate for all values:
  [32m[Function isOdd][39m
Received:
  [31mArray [
  1,
  3,
  5,
  7,
][39m"
`;

exports[`.toSatisfyAll > fails when any value does not satisfy the predicate 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toSatisfyAll([22m[32mexpected[39m[2m)[22m

Expected array to satisfy predicate for all values:
  [32m[Function isOdd][39m
Received:
  [31mArray [
  1,
  3,
  4,
  5,
][39m"
`;
